--- a/public/js/blocks/contact_form/contact_form1/contact_form.css
+++ b/public/js/blocks/contact_form/contact_form1/contact_form.css
@@ -133,32 +133,6 @@ a {
 
 /************** bootstrap end  *******************/
 
-/* ---------- root start---------- */
-
-:root {
- --primary-color: rgb(230, 43, 29);
- --secondray-color: #2d2d2d;
- --white_color: #ffff;
- --color_black: #000000;
- --main_section-heading-color: #141414;
- --main_section-sub-heading-color: #5a5a5a;
- --main_section-sh-description-color: #808080;
- --descriptions_heading-color: #141414;
- --descriptions_paragraph-color: #5a5a5a;
- --text-background-color: #2d2d2d;
- --hr_color: #f3f3f3;
- --icon_box-border-color: #f0f0f0;
- --categories-span-color: #4d4d4d;
- --icon_color: var(--primary-color);
- --contact_form_back_color: #fff;
- --input_placeholder-color: #2c2c2c;
- --button_box-shadow-color: 1px 2px 25px rgba(0, 0, 0, 0.2);
- --contact_form_box-shadow: 1px 2px 20px rgba(0, 0, 0, 0.1);
- --icon_font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
-}
-
-/* ---------- root end---------- */
-
 /******* main code start  *********/
 .contact_box_in_1 {
  padding: 100px 25px;
@@ -198,13 +172,13 @@ a {
  display: grid;
  place-items: center;
  border-radius: 50%;
- border: 1px solid var(--icon_box-border-color);
+ border: 1px solid #f0f0f0;
 }
 
 .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-fist-section .icon_and_text .icon span {
  font-size: 38px;
- font-variation-settings: var(--icon_font-variation-settings);
- color: var(--icon_color);
+ font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+ color: rgb(230, 43, 29);
 }
 
 .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-fist-section .icon_and_text .text {
@@ -213,13 +187,13 @@ a {
 
 .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-fist-section .icon_and_text .text p {
  padding: 8px;
- color: var(--descriptions_paragraph-color);
+ color: #5a5a5a;
 }
 
 .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-second-section {
  padding: 50px;
- box-shadow: var(--contact_form_box-shadow);
- background-color: var(--contact_form_back_color);
+ box-shadow: 1px 2px 20px rgba(0, 0, 0, 0.1);
+ background-color: #fff;
  border-radius: 10px;
 }
 
@@ -242,27 +216,27 @@ a {
 .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-second-section .contact_id_1-form_con form .half_width .un_text input::placeholder,
 .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-second-section .contact_id_1-form_con form .full_width .un_text input::placeholder,
 .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-second-section .contact_id_1-form_con form .full_width .un_text textarea::placeholder {
- color: var(--input_placeholder-color);
+ color: #2c2c2c;
 }
 
-.contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-second-section .contact_id_1-form_con form .submit_button {
+.contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-form_con form .submit_button {
  padding: 20px 0px;
 }
 
-.contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-second-section .contact_id_1-form_con form .submit_button button {
+.contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-form_con form .submit_button button {
  border-radius: 100px;
  font-size: 18px;
- background-color: var(--primary-color);
- color: var(--white_color);
+ background-color: rgb(230, 43, 29);
+ color: #ffff;
  padding: 15px 45px;
  cursor: pointer;
  transform: scale(1);
  transition: all 0.45s ease-in-out;
 }
 
-.contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-second-section .contact_id_1-form_con form .submit_button button:hover {
+.contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-form_con form .submit_button button:hover {
  transform: scale(0.95);
- box-shadow: var(--button_box-shadow-color);
+ box-shadow: 1px 2px 25px rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (max-width: 900px) {
@@ -280,7 +254,7 @@ a {
   margin-top: 40px;
  }
 
- .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-fist-section {
+ .contact_box_in_1 .contact_id_1-under-two-sections .contact_box_in_1 .contact_id_1-under-two-sections .contact_id_1-fist-section {
   padding-top: 10px;
  }
 }
@@ -300,5 +274,3 @@ a {
   padding: 10px 25px;
  }
 }
-
-/******* main code end  *********/
