--- a/public/js/blocks/hero/hero3/hero.css
+++ b/public/js/blocks/hero/hero3/hero.css
@@ -133,36 +133,13 @@ a {
 
 /************** bootstrap end  *******************/
 
-/* ---------- root start---------- */
-
-:root {
- --primary-color: rgb(82, 55, 134);
- --secondray-color: #2d2d2d;
- --white_color: #ffff;
- --color_black: #000000;
- --main_section-heading-color: #fafafa;
- --main_section-sub-heading-color: rgb(244, 241, 250);
- --main_section-sh-description-color: #808080;
- --descriptions_heading-color: #141414;
- --descriptions_paragraph-color: #5a5a5a;
- --hr_color: #f3f3f3;
- --button_color: #fff;
- --main_con_back_color: rgba(32, 29, 41, 0.904);
- --button_back-color: #ffffff00;
- --button_border-color: 1px solid #fff;
- --icon_color: var(--primary-color);
- --icon_font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
-}
-
-/* ---------- root end---------- */
-
 /******* main code start  *********/
 .highlight_box_id_3 {
  position: relative;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
- background-color: var(--main_con_back_color);
+ background-color: rgba(32, 29, 41, 0.904);
  background-blend-mode: darken;
 }
 
@@ -176,7 +153,7 @@ a {
  max-width: 750px;
  width: 100%;
  margin: 0 auto;
- color: var(--main_section-heading-color);
+ color: #fafafa;
 }
 
 .highlight_box_id_3 .highlight_id_3-main-container .under_sub-heading span {
@@ -186,7 +163,7 @@ a {
  padding: 15px 10px;
  max-width: 750px;
  width: 100%;
- color: var(--main_section-sub-heading-color);
+ color: rgb(244, 241, 250);
 }
 
 .highlight_box_id_3 .highlight_id_3-main-container .button_con {
@@ -196,13 +173,13 @@ a {
 .highlight_box_id_3 .highlight_id_3-main-container .button_con button {
  padding: 15px 40px;
  font-size: 16.5px;
- background-color: var(--button_back-color);
- color: var(--button_color);
- border: var(--button_border-color);
+ background-color: #ffffff00;
+ color: #fff;
+ border: 1px solid #fff;
 }
 
 .highlight_box_id_3 .highlight_id_3-main-container button:hover {
- background-color: var(--primary-color);
+ background-color: rgb(82, 55, 134);
  border: 1px solid transparent;
 }
 
